# pbls

./: .gitignore  .plbs.toml  Cargo.toml  LICENSE  README.md
src/: file.rs  lib.rs  logger.rs  main.rs  parser.rs  protoc.rs  syntax.rs  workspace.rs
testdata/: .pbls.toml  dep.proto  error.proto  other.proto  simple.proto
testdata/folder/: stuff.proto
tests/: integration_test.rs
