[package]
name = "pbls"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lsp-types = "0.94.1"
lsp-server = "0.7.4"
protobuf-parse = "3.3.0"
protobuf = "3.3.0"
toml = "0.8.6"
tree-sitter-protobuf = { git = "https://github.com/yusdacra/tree-sitter-protobuf", rev = "19c211a01434d9f03efff99f85e19f967591b175" }
tree-sitter = "~0.20.0"
log = "0.4.20"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.8.1"
