[package]
name = "pbls"
version = "1.0.3"
edition = "2021"
license = "MIT"
description = "Protobuf Language Server"
homepage = "https://git.sr.ht/~rrc/pbls"
repository = "https://git.sr.ht/~rrc/pbls"
keywords = ["language-server", "protobuf", "lsp"]
categories = ["development-tools"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lsp-types = "0.97.0"
lsp-server = "0.7.4"
toml = "0.8.6"
tree-sitter-protobuf = { git = "https://github.com/sluongng/tree-sitter-protobuf", rev = "f90291422082f7e745710123cb4a70c1874dafb7" }
tree-sitter = "~0.23.0"
log = "0.4.20"
env_logger = { version = "0.11.5", default-features = false }
walkdir = "2.4.0"
regex = "1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.8.1"
